Basic Contact Info Added

--- a/index.html
+++ b/index.html
@@ -3,8 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>Hunter Wilson Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="My Portfolio as a Fullstack developer with both
+     backend and frontend experience, and a wide range of either professional
+     projects or personal projects under my belt.">
+    <meta name="keywords" content="Fullstack, Backend, Frontend, Developer, Portfolio, Professional, Java">
+    <meta name="author" content="Hunter Wilson">
+    <meta name="robots" content="index">
+    <link rel="stylesheet" href="css.css">
 </head>
 <body>
-<h1>Hello World</h1>
+<div class="sidebar">
+    <div id="profile">
+        <div id="profile_image">
+            <img src="images/pic.png" alt="portrait of Hunter Wilson">
+        </div>
+        <div id="full_name">
+            <h1>Hunter Wilson</h1>
+        </div>
+    </div>
+    <div id="contact_info">
+        <div id="email">
+            <span>Email:</span>
+            <span>hunterinswitzerland@gmail.com</span>
+        </div>
+        <div id="github">
+            <span>Github:</span>
+            <span>github.com/hunter-1</span>
+        </div>
+    </div>
+</div>
 </body>
 </html>
