Website made responsive

--- a/index.html
+++ b/index.html
@@ -18,33 +18,32 @@
     <a href="#full_profile">Profile</a>
     <a href="#projects">Projects</a>
 </div>
-<div id="full_profile">
-    <div id="profile">
-        <div id="profile_title">
+<div id="all">
+    <div id="full_profile">
+        <div>
             <h1>Profile</h1>
-        </div>
-        <div id="profile_image">
-            <img src="images/pic.png" alt="portrait of Hunter Wilson">
-        </div>
-        <div id="full_name">
-            <h2>Hunter Wilson</h2>
+            <div id="profile">
+                <div id="profile_image_div">
+                    <img id="profile_image" src="images/pic.png" alt="portrait of Hunter Wilson">
+                </div>
+                <div id="full_name">
+                    <h2>Hunter Wilson</h2>
+                </div>
+            </div>
         </div>
     </div>
-</div>
-<div id="projects">
-    <h1>Project History</h1>
-    <ul>
-        <li>
-            <div class="project_info">
-                <p class="project_year">2016</p>
-                <p class="project_title">Duality Video Game</p>
-                <p class="project_languages">Game Maker Language</p>
-            </div>
-            <img src="images/duality.png" alt="Screenshot of Duality Platformer">
-            <p class="project_description">Platformer where you control
-                two player characters at the same time.</p>
-        </li>
-    </ul>
+    <div id="projects">
+        <h1>Project History</h1>
+        <div class="project_info">
+            <p>2016<br>
+                Duality Video Game<br>
+                Game Maker Language
+            </p>
+        </div>
+        <img class="screenshot" src="images/duality.png" alt="Screenshot of Duality Platformer">
+        <p class="project_description">Platformer where you control
+            two player characters at the same time.</p>
+    </div>
 </div>
 <div class="footer">
     <table>
