More Projects added to website

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Hunter Wilson Portfolio</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="My Portfolio as a Fullstack developer with both
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="My Portfolio as a Fullstack developer with both
      backend and frontend experience, and a wide range of either professional
-     projects or personal projects under my belt.">
-    <meta name="keywords" content="Fullstack, Backend, Frontend, Developer, Portfolio, Professional, Java">
-    <meta name="author" content="Hunter Wilson">
-    <meta name="robots" content="index">
-    <link rel="stylesheet" href="css.css">
+     projects or personal projects under my belt." name="description">
+    <meta content="Fullstack, Backend, Frontend, Developer, Portfolio, Professional, Java" name="keywords">
+    <meta content="Hunter Wilson" name="author">
+    <meta content="index" name="robots">
+    <link href="css.css" rel="stylesheet">
 </head>
 <body>
 <div class="topnav">
@@ -24,7 +24,7 @@
             <h1>Profile</h1>
             <div id="profile">
                 <div id="profile_image_div">
-                    <img id="profile_image" src="images/pic.png" alt="portrait of Hunter Wilson">
+                    <img alt="portrait of Hunter Wilson" id="profile_image" src="images/pic.png">
                 </div>
                 <div id="full_name">
                     <h2>Hunter Wilson</h2>
@@ -34,16 +34,49 @@
     </div>
     <div id="projects">
         <h1>Project History</h1>
-        <div class="project_info">
-            <p>2016<br>
+
+        <p>2021<br>
+            Space Fighter Video Game <br>
+            Flutter
+        </p>
+        <img alt="Screenshot of Space Fighter" class="screenshot" src="images/space_fighter.jpg">
+        <p class="project_description">Video game made with the Flutter Flame game engine. Uses phone movements to move ship</p>
+        <a class="download" href="https://github.com/Hunter-1/mini_game/releases/tag/1.0.0">Download from Github</a>
+
+        <p>2021<br>
+            8 Queen Problem<br>
+            Flutter
+        </p>
+        <img alt="Screenshot of 8 Queen Problem" class="screenshot" src="images/chess_game.png">
+        <p class="project_description">Chess problem programmed in Flutter, allows users to create accounts and displays all users scores from a database</p>
+
+        <p>2020<br>
+            Data Diagram from Esl and Sdat files <br>
+            Java
+        </p>
+        <img alt="Screenshot of Data Diagram Maker" class="screenshot" src="images/bunzlienergie.png">
+        <p class="project_description">Creates a organized diagram based on unorganized data from multiple file types</p>
+
+        <p>2018<br>
+            Tschau Sepp Video Game<br>
+            Java
+        </p>
+        <img alt="Screenshot of Tschau Sepp Card Game" class="screenshot" src="images/tschausepp.png">
+        <p class="project_description">A Card Game built similarly to Uno</p>
+        <a class="download" href="https://github.com/Hunter-1/TschauSepp/releases/tag/1.0">Download from Github</a>
+
+
+        <p>2016<br>
                 Duality Video Game<br>
                 Game Maker Language
             </p>
-        </div>
-        <img class="screenshot" src="images/duality.png" alt="Screenshot of Duality Platformer">
+        <img alt="Screenshot of Duality Platformer" class="screenshot" src="images/duality.png">
         <p class="project_description">Platformer where you control
             two player characters at the same time.</p>
-    </div>
+        <a class="download" href="https://github.com/Hunter-1/Duality/releases/tag/1.0">Download from Github</a>
+
+
+</div>
 </div>
 <div class="footer">
     <table>
