--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta content="Hunter Wilson" name="author">
     <meta content="index" name="robots">
     <link href="css.css" rel="stylesheet">
+    <link rel="shortcut icon" type="images/x-icon" href="images/logo.ico">
 </head>
 <body>
 <div class="topnav">
