--- a/index.html
+++ b/index.html
@@ -16,68 +16,58 @@
 <body>
 <div class="topnav">
     <b>Hunter Wilson</b>
-    <a href="#full_profile">Profile</a>
     <a href="#projects">Projects</a>
+    <a href="#cv">Profile</a>
 </div>
 <div id="all">
-    <div id="full_profile">
-        <div>
-            <h1>Profile</h1>
-            <div id="profile">
-                <div id="profile_image_div">
-                    <img alt="portrait of Hunter Wilson" id="profile_image" src="images/pic.png">
-                </div>
-                <div id="full_name">
-                    <h2>Hunter Wilson</h2>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="projects">
-        <h1>Project History</h1>
 
-        <p>2021<br>
+    <h1>Project History</h1>
+    <div id="projects">
+
+        <div class="project"><p>2021<br>
             Space Fighter Video Game <br>
             Flutter
         </p>
-        <img alt="Screenshot of Space Fighter" class="screenshot" src="images/space_fighter.jpg">
-        <p class="project_description">Video game made with the Flutter Flame game engine. Uses phone movements to move ship</p>
-        <a class="download" href="https://github.com/Hunter-1/mini_game/releases/tag/1.0.0">Download from Github</a>
+            <img alt="Screenshot of Space Fighter" class="screenshot" src="images/space_fighter.jpg">
+            <p class="project_description">Video game made with the Flutter Flame game engine. Uses phone movements to
+                move ship</p>
+            <a class="download" href="https://github.com/Hunter-1/mini_game/releases/tag/1.0.0">Download from Github</a></div>
 
-        <p>2021<br>
+        <div class="project"><p>2021<br>
             8 Queen Problem<br>
             Flutter
         </p>
-        <img alt="Screenshot of 8 Queen Problem" class="screenshot" src="images/chess_game.png">
-        <p class="project_description">Chess problem programmed in Flutter, allows users to create accounts and displays all users scores from a database</p>
+            <img alt="Screenshot of 8 Queen Problem" class="screenshot" src="images/chess_game.png">
+            <p class="project_description">Chess problem programmed in Flutter, allows users to create accounts and
+                displays all users scores from a database</p></div>
 
-        <p>2020<br>
+        <div class="project"><p>2020<br>
             Data Diagram from Esl and Sdat files <br>
             Java
         </p>
-        <img alt="Screenshot of Data Diagram Maker" class="screenshot" src="images/bunzlienergie.png">
-        <p class="project_description">Creates a organized diagram based on unorganized data from multiple file types</p>
+            <img alt="Screenshot of Data Diagram Maker" class="screenshot" src="images/bunzlienergie.png">
+            <p class="project_description">Creates a organized diagram based on unorganized data from multiple file
+                types</p></div>
 
-        <p>2018<br>
+        <div class="project"><p>2018<br>
             Tschau Sepp Video Game<br>
             Java
         </p>
-        <img alt="Screenshot of Tschau Sepp Card Game" class="screenshot" src="images/tschausepp.png">
-        <p class="project_description">A Card Game built similarly to Uno</p>
-        <a class="download" href="https://github.com/Hunter-1/TschauSepp/releases/tag/1.0">Download from Github</a>
+            <img alt="Screenshot of Tschau Sepp Card Game" class="screenshot" src="images/tschausepp.png">
+            <p class="project_description">A Card Game built similarly to Uno</p>
+            <a class="download" href="https://github.com/Hunter-1/TschauSepp/releases/tag/1.0">Download from Github</a></div>
 
 
-        <p>2016<br>
-                Duality Video Game<br>
-                Game Maker Language
-            </p>
-        <img alt="Screenshot of Duality Platformer" class="screenshot" src="images/duality.png">
-        <p class="project_description">Platformer where you control
-            two player characters at the same time.</p>
-        <a class="download" href="https://github.com/Hunter-1/Duality/releases/tag/1.0">Download from Github</a>
-
-
-</div>
+        <div class="project"><p>2016<br>
+            Duality Video Game<br>
+            Game Maker Language
+        </p>
+            <img alt="Screenshot of Duality Platformer" class="screenshot" src="images/duality.png">
+            <p class="project_description">Platformer where you control
+                two player characters at the same time.</p>
+            <a class="download" href="https://github.com/Hunter-1/Duality/releases/tag/1.0">Download from Github</a></div>
+    </div>
+    <embed id="cv" src="docs/Lebenslauf.pdf" >
 </div>
 <div class="footer">
     <table>
