--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="topnav">
     <b>Hunter Wilson</b>
     <a href="#projects">Projects</a>
-    <a href="#cv">Profile</a>
+    <a>Profile</a>
 </div>
 <div id="all">
 
@@ -67,7 +67,6 @@
                 two player characters at the same time.</p>
             <a class="download" href="https://github.com/Hunter-1/Duality/releases/tag/1.0">Download from Github</a></div>
     </div>
-    <embed id="cv" src="docs/Lebenslauf.pdf" >
 </div>
 <div class="footer">
     <table>
