Added Project Calculator

--- a/index.html
+++ b/index.html
@@ -17,12 +17,19 @@
 <div class="topnav">
     <b>Hunter Wilson</b>
     <a href="#projects">Projects</a>
-    <a>Profile</a>
 </div>
 <div id="all">
-
-    <h1>Project History</h1>
+    <h1>Project Examples</h1>
     <div id="projects">
+
+        <div class="project"><p>2021<br>
+            Calculator <br>
+            React - Typescript
+        </p>
+            <img alt="Screenshot of Calculator" class="screenshot" src="images/calculator.png">
+            <p class="project_description">Calculator created in React Typescript. Only has simple operators</p>
+            <a class="download" href="https://github.com/Hunter-1/react-calculator/">Github Project Link</a>
+        </div>
 
         <div class="project"><p>2021<br>
             Space Fighter Video Game <br>
@@ -31,7 +38,7 @@
             <img alt="Screenshot of Space Fighter" class="screenshot" src="images/space_fighter.jpg">
             <p class="project_description">Video game made with the Flutter Flame game engine. Uses phone movements to
                 move ship</p>
-            <a class="download" href="https://github.com/Hunter-1/mini_game/releases/tag/1.0.0">Download from Github</a></div>
+            <a class="download" href="https://github.com/Hunter-1/mini_game/">Github Project Link</a></div>
 
         <div class="project"><p>2021<br>
             8 Queen Problem<br>
@@ -39,7 +46,8 @@
         </p>
             <img alt="Screenshot of 8 Queen Problem" class="screenshot" src="images/chess_game.png">
             <p class="project_description">Chess problem programmed in Flutter, allows users to create accounts and
-                displays all users scores from a database</p></div>
+                displays all users scores from a database</p>
+        <a class="download" href="https://github.com/Hunter-1/chess_queen/">Github Project Link</a></div>
 
         <div class="project"><p>2020<br>
             Data Diagram from Esl and Sdat files <br>
@@ -47,7 +55,8 @@
         </p>
             <img alt="Screenshot of Data Diagram Maker" class="screenshot" src="images/bunzlienergie.png">
             <p class="project_description">Creates a organized diagram based on unorganized data from multiple file
-                types</p></div>
+                types</p>
+        <a class="download" href="https://github.com/Hunter-1/Bunzlienergie/">Github Project Link</a></div>
 
         <div class="project"><p>2018<br>
             Tschau Sepp Video Game<br>
@@ -55,7 +64,7 @@
         </p>
             <img alt="Screenshot of Tschau Sepp Card Game" class="screenshot" src="images/tschausepp.png">
             <p class="project_description">A Card Game built similarly to Uno</p>
-            <a class="download" href="https://github.com/Hunter-1/TschauSepp/releases/tag/1.0">Download from Github</a></div>
+            <a class="download" href="https://github.com/Hunter-1/TschauSepp/">Github Project Link</a></div>
 
 
         <div class="project"><p>2016<br>
@@ -65,7 +74,8 @@
             <img alt="Screenshot of Duality Platformer" class="screenshot" src="images/duality.png">
             <p class="project_description">Platformer where you control
                 two player characters at the same time.</p>
-            <a class="download" href="https://github.com/Hunter-1/Duality/releases/tag/1.0">Download from Github</a></div>
+            <a class="download" href="https://github.com/Hunter-1/Duality/">Github Project Link</a>
+        </div>
     </div>
 </div>
 <div class="footer">
