Added Project Timestamp

--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
     <div id="projects">
 
         <div class="project"><p>2021<br>
+            Record Timestamp<br>
+            React - Javascript - Postgraphile - Apollo Server
+        </p>
+            <img alt="Screenshot of Timestamps" class="screenshot" src="images/Zeiterfassung.png">
+            <p class="project_description">Crud created using React, Postgraphile, Apollo</p>
+            <a class="download" href="https://github.com/Hunter-1/zeiterfassung_crud_js/">Github Project Link</a>
+        </div>
+
+        <div class="project"><p>2021<br>
             Calculator <br>
             React - Typescript
         </p>
